# new-text-adventure-game

./: .game_history  README.md  ai_log_collector_20250818_200634.txt  ai_log_combatant_20250818_200633.txt  ai_log_explorer_20250818_200625.txt  ai_log_explorer_20250818_200631.txt  ai_log_explorer_20250818_201343.txt  ai_log_explorer_20250818_201431.txt  ai_log_explorer_20250818_202010.txt  ai_log_explorer_20250818_202347.txt  ai_log_explorer_20250818_202503.txt  ai_log_explorer_20250818_202634.txt  ai_log_explorer_20250818_203106.txt  ai_log_explorer_20250818_204126.txt  ai_log_explorer_20250819_170945.txt  ai_log_quester_20250818_200635.txt  ai_log_random_20250818_200637.txt  ai_log_random_20250818_200642.txt  ai_log_random_20250818_200643.txt  ai_test_results_20250818_200625.json  ai_test_results_20250818_200637.json  ai_test_results_20250818_200643.json  ai_test_results_20250818_201343.json  ai_test_results_20250818_201431.json  ai_test_results_20250818_202010.json  ai_test_results_20250818_202347.json  ai_test_results_20250818_202503.json  ai_test_results_20250818_202634.json  ai_test_results_20250818_203106.json  ai_test_results_20250818_204126.json  ai_test_results_20250819_170945.json  ai_test_runner.py  main.py  pyproject.toml
.cursor/rules/: new-text-adventure-game.mdc
.env/: pyvenv.cfg
data/art/: game_over_banner.txt  title_banner.txt  victory_banner.txt
data/art/combat/: attack_0.txt  defend_0.txt  heal_0.txt
docs/: game.md  index.html
game/: __init__.py  ai_player.py  ascii_art.py  combat.py  commands.py  crafting.py  engine.py  models.py  quests.py  save_system.py  visuals.py  world_builder.py
tests/: __init__.py  test_models.py
text_adventure_game.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+17 files in other folders)
